--- a/darts501.html
+++ b/darts501.html
@@ -12,7 +12,7 @@
     <div class="board" id="board"></div>
     <div class="scoreboard">
      <div class="player-panel player1">
-      <h2 class="player-name">Jugador 1</h2>
+      <h2 class="player-name" id="player1-name">Jugador 1</h2>
       <div class="score" id="player1Score">501</div>
       <div class="darts">
        <span class="dart-score" id="player1dart1">0</span>
@@ -22,7 +22,7 @@
      </div>
   
      <div class="player-panel player2">
-      <h2 class="player-name">Jugador 2</h2>
+      <h2 class="player-name" id="player2-name">Jugador 2</h2>
       <div class="score" id="player2Score">501</div>
       <div class="darts">
        <span class="dart-score" id="player2dart1">0</span>
